# GoogleLatinIME

./: .gitignore  Android.mk  CleanSpec.mk  README.md  build.gradle
native/: CMakeLists.txt
native/dicttoolkit/: Android.mk  CleanupNativeFileList.mk  NativeFileList.mk  UnitTests.mk  dict_toolkit_main.cpp  run_tests.sh
native/dicttoolkit/src/: dict_toolkit_defines.h
native/dicttoolkit/src/command_executors/: diff_executor.cpp  diff_executor.h  header_executor.cpp  header_executor.h  help_executor.cpp  help_executor.h  info_executor.cpp  info_executor.h  makedict_executor.cpp  makedict_executor.h
native/dicttoolkit/src/offdevice_intermediate_dict/: offdevice_intermediate_dict.cpp  offdevice_intermediate_dict.h  offdevice_intermediate_dict_header.h  offdevice_intermediate_dict_pt_node.h  offdevice_intermediate_dict_pt_node_array.h
native/dicttoolkit/src/utils/: arguments_and_options.h  arguments_parser.cpp  arguments_parser.h  command_utils.cpp  command_utils.h  utf8_utils.cpp  utf8_utils.h
native/dicttoolkit/tests/: dict_toolkit_defines_test.cpp
native/dicttoolkit/tests/command_executors/: diff_executor_test.cpp  header_executor_test.cpp  info_executor_test.cpp  makedict_executor_test.cpp
native/dicttoolkit/tests/offdevice_intermediate_dict/: offdevice_intermediate_dict_test.cpp
native/dicttoolkit/tests/utils/: arguments_parser_test.cpp  command_utils_test.cpp  utf8_utils_test.cpp
native/jni/: Android.mk  CleanupNativeFileList.mk  HostUnitTests.mk  NativeFileList.mk  TargetUnitTests.mk  com_android_inputmethod_keyboard_ProximityInfo.cpp  com_android_inputmethod_keyboard_ProximityInfo.h  com_android_inputmethod_latin_BinaryDictionary.cpp  com_android_inputmethod_latin_BinaryDictionary.h  com_android_inputmethod_latin_BinaryDictionaryUtils.cpp  com_android_inputmethod_latin_BinaryDictionaryUtils.h  com_android_inputmethod_latin_DicTraverseSession.cpp  com_android_inputmethod_latin_DicTraverseSession.h  jni_common.cpp  jni_common.h  run-tests.sh
native/jni/src/: defines.h
native/jni/src/dictionary/header/: header_policy.cpp  header_policy.h  header_read_write_utils.cpp  header_read_write_utils.h
native/jni/src/dictionary/interface/: dictionary_bigrams_structure_policy.h  dictionary_header_structure_policy.h  dictionary_shortcuts_structure_policy.h  dictionary_structure_with_buffer_policy.h  ngram_listener.h
native/jni/src/dictionary/property/: historical_info.h  ngram_context.cpp  ngram_context.h  ngram_property.h  unigram_property.h  word_attributes.h  word_property.h
native/jni/src/dictionary/structure/: dictionary_structure_with_buffer_policy_factory.cpp  dictionary_structure_with_buffer_policy_factory.h
native/jni/src/dictionary/structure/pt_common/: dynamic_pt_gc_event_listeners.cpp  dynamic_pt_gc_event_listeners.h  dynamic_pt_reading_helper.cpp  dynamic_pt_reading_helper.h  dynamic_pt_reading_utils.cpp  dynamic_pt_reading_utils.h  dynamic_pt_updating_helper.cpp  dynamic_pt_updating_helper.h  dynamic_pt_writing_utils.cpp  dynamic_pt_writing_utils.h  patricia_trie_reading_utils.cpp  patricia_trie_reading_utils.h  pt_node_array_reader.h  pt_node_params.h  pt_node_reader.h  pt_node_writer.h
native/jni/src/dictionary/structure/v2/: patricia_trie_policy.cpp  patricia_trie_policy.h  ver2_patricia_trie_node_reader.cpp  ver2_patricia_trie_node_reader.h  ver2_pt_node_array_reader.cpp  ver2_pt_node_array_reader.h
native/jni/src/dictionary/structure/v4/: ver4_dict_buffers.cpp  ver4_dict_buffers.h  ver4_dict_constants.cpp  ver4_dict_constants.h  ver4_patricia_trie_node_reader.cpp  ver4_patricia_trie_node_reader.h  ver4_patricia_trie_node_writer.cpp  ver4_patricia_trie_node_writer.h  ver4_patricia_trie_policy.cpp  ver4_patricia_trie_policy.h  ver4_patricia_trie_reading_utils.cpp  ver4_patricia_trie_reading_utils.h  ver4_patricia_trie_writing_helper.cpp  ver4_patricia_trie_writing_helper.h  ver4_pt_node_array_reader.cpp  ver4_pt_node_array_reader.h
native/jni/src/dictionary/utils/: binary_dictionary_bigrams_iterator.h  binary_dictionary_shortcut_iterator.h  bloom_filter.h  buffer_with_extendable_buffer.cpp  buffer_with_extendable_buffer.h  byte_array_utils.cpp  byte_array_utils.h  dict_file_writing_utils.cpp  dict_file_writing_utils.h  entry_counters.h  file_utils.cpp  file_utils.h  forgetting_curve_utils.cpp  forgetting_curve_utils.h  format_utils.cpp  format_utils.h  mmapped_buffer.cpp  mmapped_buffer.h  multi_bigram_map.cpp  multi_bigram_map.h  probability_utils.cpp  probability_utils.h  sparse_table.cpp  sparse_table.h  trie_map.cpp  trie_map.h
native/jni/src/suggest/core/: suggest.cpp  suggest.h  suggest_interface.h  suggest_options.h
native/jni/src/suggest/core/dicnode/: dic_node.cpp  dic_node.h  dic_node_pool.h  dic_node_priority_queue.h  dic_node_profiler.h  dic_node_utils.cpp  dic_node_utils.h  dic_node_vector.h  dic_nodes_cache.cpp  dic_nodes_cache.h
native/jni/src/suggest/core/dictionary/: dictionary.cpp  dictionary.h  dictionary_utils.cpp  dictionary_utils.h  digraph_utils.cpp  digraph_utils.h  error_type_utils.cpp  error_type_utils.h
native/jni/src/suggest/core/layout/: additional_proximity_chars.cpp  additional_proximity_chars.h  geometry_utils.h  normal_distribution.h  normal_distribution_2d.h  (+10 more)
native/jni/src/utils/: autocorrection_threshold_utils.cpp  autocorrection_threshold_utils.h  byte_array_view.h  char_utils.cpp  char_utils.h  int_array_view.h  jni_data_utils.cpp  jni_data_utils.h  log_utils.cpp  log_utils.h  ngram_utils.h  profiler.h  time_keeper.cpp  time_keeper.h
native/jni/tests/: defines_test.cpp
native/jni/tests/dictionary/header/: header_read_write_utils_test.cpp
native/jni/tests/dictionary/utils/: bloom_filter_test.cpp  buffer_with_extendable_buffer_test.cpp  byte_array_utils_test.cpp  format_utils_test.cpp  probability_utils_test.cpp  sparse_table_test.cpp  trie_map_test.cpp
native/jni/tests/utils/: autocorrection_threshold_utils_test.cpp  char_utils_test.cpp  int_array_view_test.cpp  time_keeper_test.cpp
(+2079 files in other folders)
